kubedefs/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: trendstore
  labels:
    name: trendstore
