kubedefs/01-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trendstore-deployment
  namespace: trendstore
  labels:
    app: trendstore
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trendstore
  template:
    metadata:
      labels:
        app: trendstore
    spec:
      containers:
      - name: trendstore
        image: docker.io/shgupta140/trendify-app:v3
        restartPolicy: OnFailure
        ports:
        - containerPort: 3000
