kubedefs/aws-alb-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: trendstore-service
  namespace: trendstore
  labels:
    app: trendstore
spec:
  selector:
    app: trendstore
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trendstore-alb
  namespace: trendstore
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:409415529933:certificate/3a9c9316-0316-4a99-b344-fba4067399ee
    alb.ingress.kubernetes.io/load-balancer-name: trendstore-alb
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: "3000"
spec:
  rules:
    - host: trendstore.nikboss.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trendstore-service
                port:
                  number: 3000
