kubedefs/local-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trendstore-ingress-local
  namespace: trendstore
  # No AWS annotations here
spec:
  ingressClassName: nginx # Uses Minikube's default controller
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trendstore-service
                port:
                  number: 3000
